Small fix for focused links in explorer.  Other areas may need this fix.  Firefox seems to be the only browser where it's visible.

--- a/appdev/explorer/file/css/index.css
+++ b/appdev/explorer/file/css/index.css
@@ -68,7 +68,7 @@
 
 }
 
-.file-tile:hover {
+.file-tile:hover, .file-tile:focus {
 	background-color: #f5f5f5;
 	border: 1px solid #ccc;
 	border-radius: 4px;
@@ -145,7 +145,7 @@
 .table a {
 	color: #333;
 }
-.table a:hover {
+.table a:hover, .table a:focus {
 	text-decoration: none;
 }
 
